--- a/style/_contact.scss
+++ b/style/_contact.scss
@@ -11,12 +11,11 @@
       width: 60%;
       margin: auto;
       background: #40ba7b;
-      border-radius: 20px;
+
       padding: 20px 0 20px 20px;
 
-      .md_btn {
+      .btn {
         width: 90%;
-        margin: auto;
       }
 
       label,
@@ -26,22 +25,29 @@
 
       label {
         padding-bottom: 4px;
+        font-weight: 600;
+        font-size: 0.8em;
       }
 
       input {
+        width: 90%;
         margin-bottom: 20px;
-        padding: 5px;
-        border-radius: 5px;
+        padding: 10px;
+        border-radius: 4px;
+
         border: none;
       }
 
       textarea {
-        border-radius: 5px;
+        width: 90%;
+        border-radius: 4px;
+        border: none;
         padding: 5px;
         font-family: "Roboto", sans-serif;
       }
 
       button {
+        width: 100%;
         font-family: "Roboto", sans-serif;
         padding: 10px;
         font-size: 0.97em;
@@ -50,6 +56,7 @@
         border-radius: 4px;
         border: none;
         color: #40ba7b;
+        background: white;
       }
     }
   }
