--- a/style/main.css
+++ b/style/main.css
@@ -1223,13 +1223,11 @@ nav #menu-icon {
   width: 60%;
   margin: auto;
   background: #40ba7b;
-  border-radius: 20px;
   padding: 20px 0 20px 20px;
 }
 
-.contact .grid .form .md_btn {
+.contact .grid .form .btn {
   width: 90%;
-  margin: auto;
 }
 
 .contact .grid .form label,
@@ -1239,22 +1237,28 @@ nav #menu-icon {
 
 .contact .grid .form label {
   padding-bottom: 4px;
+  font-weight: 600;
+  font-size: 0.8em;
 }
 
 .contact .grid .form input {
+  width: 90%;
   margin-bottom: 20px;
-  padding: 5px;
-  border-radius: 5px;
+  padding: 10px;
+  border-radius: 4px;
   border: none;
 }
 
 .contact .grid .form textarea {
-  border-radius: 5px;
+  width: 90%;
+  border-radius: 4px;
+  border: none;
   padding: 5px;
   font-family: "Roboto", sans-serif;
 }
 
 .contact .grid .form button {
+  width: 100%;
   font-family: "Roboto", sans-serif;
   padding: 10px;
   font-size: 0.97em;
@@ -1263,6 +1267,7 @@ nav #menu-icon {
   border-radius: 4px;
   border: none;
   color: #40ba7b;
+  background: white;
 }
 
 @media screen and (max-width: 1200px) {
