--- a/style/_contact.scss
+++ b/style/_contact.scss
@@ -11,6 +11,9 @@
       width: 60%;
       margin: auto;
       background: #40ba7b;
+      box-shadow: 11px 6px 8px -10px rgba(0, 0, 0, 0.3);
+      -webkit-box-shadow: 11px 6px 17px -10px rgba(0, 0, 0, 0.3);
+      -moz-box-shadow: 11px 6px 17px -10px rgba(0, 0, 0, 0.3);
 
       padding: 20px 0 20px 20px;
 
