--- a/style/_contact.scss
+++ b/style/_contact.scss
@@ -78,21 +78,23 @@
 @media screen and (max-width: 969px) {
   .contact {
     .grid {
+      grid-template-columns: 1fr 2fr;
       grid-column-gap: 30px;
-      grid-template-columns: 1fr;
       width: 90%;
       margin: auto;
       .form {
         margin: 10px 0px;
-        width: 50%;
+        width: 90%;
       }
     }
   }
 }
 
-@media screen and (max-width: 758px) {
+@media screen and (max-width: 890px) {
   .contact {
     .grid {
+      grid-template-columns: 1fr;
+
       .form {
         width: 75%;
       }
@@ -153,6 +155,15 @@
 
     .item {
       margin-right: 10px;
+    }
+  }
+}
+
+@media (max-width: 890px) {
+  .contact_icons {
+    padding-left: 10px;
+    .social_icons {
+      padding-top: 0px;
     }
   }
 }
