--- a/style/_greenstart.scss
+++ b/style/_greenstart.scss
@@ -15,28 +15,17 @@
   grid-template-columns: 1.4fr 1fr;
 }
 .greenstart_ad {
-  // width: 50%;
   margin: auto;
 
   .md_heading {
     color: #40ba7b;
-    // margin-top: 80px;
-    width: 100%;
-    // text-align: center;
-  }
 
-  // .bold {
-  //   text-align: center;
-  //   width: 70%;
-  //   margin: auto;
-  //   padding-bottom: 20px;
-  // }
+    width: 100%;
+  }
 
   ul {
     list-style: none;
     padding: 0;
-    // width: 30%;
-    // margin: auto;
 
     li {
       font-weight: 600;
@@ -51,7 +40,6 @@
   }
 
   .btn {
-    // width: 30%;
     margin: 40px auto 0 auto;
   }
 }
@@ -67,6 +55,48 @@
   .embed {
     padding-top: 20px;
     height: 40vh;
+  }
+
+  .greenstart_ad {
+    ul {
+      width: 30%;
+      padding-left: 20px;
+      margin: auto;
+      text-align: left;
+    }
+  }
+}
+
+@media (max-width: 860px) {
+  .greenstart_ad {
+    ul {
+      width: 35%;
+      padding-left: 20px;
+      margin: auto;
+      text-align: left;
+    }
+  }
+}
+
+@media (max-width: 650px) {
+  .greenstart_ad {
+    ul {
+      width: 50%;
+      padding-left: 20px;
+      margin: auto;
+      text-align: left;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .greenstart_ad {
+    ul {
+      width: 80%;
+      padding-left: 20px;
+      margin: auto;
+      text-align: left;
+    }
   }
 }
 
@@ -267,6 +297,57 @@
     .image {
       margin-bottom: 10px;
       margin-left: 50px;
+    }
+  }
+}
+
+@media (max-width: 657px) {
+  .approachngr {
+    .grid {
+      width: 90%;
+      margin: auto;
+      .item {
+        width: 55%;
+        padding-left: 50px;
+        margin: auto;
+
+        ul {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .approachngr {
+    .grid {
+      width: 100%;
+      .item {
+        width: 68%;
+        padding-left: 20px;
+        margin: auto;
+
+        ul {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 490px) {
+  .approachngr {
+    .grid {
+      .item {
+        width: 87%;
+        padding-left: 25px;
+        margin: auto;
+
+        ul {
+          width: 100%;
+        }
+      }
     }
   }
 }
