--- a/style/main.css
+++ b/style/main.css
@@ -890,6 +890,39 @@
     padding-top: 20px;
     height: 40vh;
   }
+  .greenstart_ad ul {
+    width: 30%;
+    padding-left: 20px;
+    margin: auto;
+    text-align: left;
+  }
+}
+
+@media (max-width: 860px) {
+  .greenstart_ad ul {
+    width: 35%;
+    padding-left: 20px;
+    margin: auto;
+    text-align: left;
+  }
+}
+
+@media (max-width: 650px) {
+  .greenstart_ad ul {
+    width: 50%;
+    padding-left: 20px;
+    margin: auto;
+    text-align: left;
+  }
+}
+
+@media (max-width: 500px) {
+  .greenstart_ad ul {
+    width: 80%;
+    padding-left: 20px;
+    margin: auto;
+    text-align: left;
+  }
 }
 
 .economy.unemployment {
@@ -1087,6 +1120,46 @@
 .approachngr .grid .image {
   margin-bottom: 10px;
   margin-left: 50px;
+}
+
+@media (max-width: 657px) {
+  .approachngr .grid {
+    width: 90%;
+    margin: auto;
+  }
+  .approachngr .grid .item {
+    width: 55%;
+    padding-left: 50px;
+    margin: auto;
+  }
+  .approachngr .grid .item ul {
+    width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .approachngr .grid {
+    width: 100%;
+  }
+  .approachngr .grid .item {
+    width: 68%;
+    padding-left: 20px;
+    margin: auto;
+  }
+  .approachngr .grid .item ul {
+    width: 100%;
+  }
+}
+
+@media (max-width: 490px) {
+  .approachngr .grid .item {
+    width: 87%;
+    padding-left: 25px;
+    margin: auto;
+  }
+  .approachngr .grid .item ul {
+    width: 100%;
+  }
 }
 
 nav {
