--- a/style/_mixins.scss
+++ b/style/_mixins.scss
@@ -66,7 +66,7 @@ $accent-color: #40ba7b;
           img {
             width: 100%;
             height: 100%;
-            object-fit: contain;
+            object-fit: fill;
           }
         }
       }
