--- a/style/_newsitem.scss
+++ b/style/_newsitem.scss
@@ -1,20 +1,19 @@
 .article_header {
-  nav {
-    border-bottom: 1px solid black;
-    ul {
-      a {
-        color: black;
-        transition: all 0.3s ease-in-out;
-      }
+  // nav {
+  //   border-bottom: 1px solid black;
+  //   ul {
+  //     a {
+  //       color: black;
+  //       transition: all 0.3s ease-in-out;
+  //     }
 
-      a:hover {
-        color: green;
-      }
-    }
+  //     a:hover {
+  //       color: green;
+  //     }
+  //   }
 
-    i {
-      color: black;
-    }
+  i {
+    color: black;
   }
 }
 
@@ -24,7 +23,8 @@
 
 .category {
   display: flex;
-  margin: 50px 0 50px 100px;
+  padding-top: 30px;
+  margin: 100px 0 50px 100px;
 
   .child {
     margin-right: 10px;
@@ -83,6 +83,19 @@
     .article_text {
       p {
         font-weight: 300;
+
+        em {
+          font-weight: 400;
+          font-style: italic;
+        }
+      }
+
+      ul,
+      ol {
+        li {
+          font-weight: 300;
+          margin-bottom: 20px;
+        }
       }
     }
 
@@ -125,11 +138,11 @@
     margin: 0 30px;
     flex: 1.3;
     height: min-content;
+    z-index: -2;
 
     .iconify.search {
       float: right;
       position: relative;
-      z-index: 2;
     }
 
     label {
