--- a/style/_agenda.scss
+++ b/style/_agenda.scss
@@ -67,6 +67,12 @@
   }
 }
 
+@media (max-width: 619px) {
+  .key_focus {
+    width: 100%;
+  }
+}
+
 .action_words {
   width: 75%;
   margin: auto;
