--- a/style/main.scss
+++ b/style/main.scss
@@ -67,6 +67,12 @@ body {
     }
   }
 
+  .md_btn.green {
+    background: #40ba7b;
+    color: #ffffff;
+    border: none;
+  }
+
   .iconify {
     background-color: white;
     border-radius: 25px;
