--- a/style/main.css
+++ b/style/main.css
@@ -1585,6 +1585,11 @@ nav #menu-icon {
   display: flex;
 }
 
+.article .md_btn.green {
+  position: relative;
+  top: 5px;
+}
+
 .article .md_heading {
   width: 100%;
   margin-bottom: 50px;
