--- a/style/main.scss
+++ b/style/main.scss
@@ -453,6 +453,7 @@ body {
         font-weight: 300;
         border-bottom: 1px solid #ffffff;
         padding-bottom: 5px;
+        margin-right: 0;
       }
 
       button {
