--- a/style/main.scss
+++ b/style/main.scss
@@ -454,7 +454,7 @@ body {
 
       input {
         font-family: "Roboto";
-        padding: 10px 20px 10px 0;
+        padding: 10px 30px 10px 5px;
         border: none;
         background: $accent-color;
         color: white;
