--- a/style/main.scss
+++ b/style/main.scss
@@ -458,6 +458,7 @@ body {
         border: none;
         background: $accent-color;
         color: white;
+        width: 90%;
       }
 
       input::placeholder {
@@ -477,6 +478,14 @@ body {
         padding: 10px 20px;
         border: none;
         color: $accent-color;
+      }
+    }
+
+    @media (max-width: 916px) {
+      .green {
+        input {
+          width: auto;
+        }
       }
     }
 
