--- a/style/main.scss
+++ b/style/main.scss
@@ -23,7 +23,8 @@ $accent-color: #40ba7b;
 
 body {
   font-family: "Roboto", sans-serif;
-  letter-spacing: 0.3px;
+  letter-spacing: 0.4px;
+  word-spacing: 3.5px;
 
   a {
     text-decoration: none;
@@ -116,6 +117,13 @@ body {
     font-weight: 600;
     margin-bottom: 10px;
     color: $accent-color;
+  }
+
+  .thin,
+  .bold,
+  .text,
+  p {
+    line-height: 23px;
   }
 
   .thin {
