--- a/style/_contact.scss
+++ b/style/_contact.scss
@@ -21,6 +21,10 @@
         width: 90%;
       }
 
+      button {
+        cursor: pointer;
+      }
+
       label,
       input {
         display: block;
