--- a/style/main.css
+++ b/style/main.css
@@ -1369,6 +1369,10 @@ nav #menu-icon {
   width: 90%;
 }
 
+.contact .grid .form button {
+  cursor: pointer;
+}
+
 .contact .grid .form label,
 .contact .grid .form input {
   display: block;
